# Pitfall-3D-Block-B

./: .gitignore  CMakeLists.txt  Pitfall3D.sln  readme.md
Engine/: Engine.vcxitems
Engine/engine/actor/: actor.cpp  actor.h
Engine/engine/camera/: camera.cpp  camera.h
Engine/engine/components/: component.cpp  component.h
Engine/engine/framework/: gameInstance.cpp  gameInstance.h
Engine/engine/math/: vector2.h  vector3.h
Engine/engine/scene/: scene.cpp  scene.h
Engine/engine/util/: common.h  util.cpp  util.h
Engine/ext/: stb_image.h
Engine/ext/imgui/: imconfig.h
Engine/src/actor/: actor.cpp  actor.h
Engine/src/camera/: camera.cpp  camera.h
Engine/src/components/: component.cpp  component.h
Engine/src/framework/: gameInstance.cpp  gameInstance.h
Engine/src/math/: vector2.h  vector3.h
Engine/src/scene/: scene.cpp  scene.h
Engine/src/util/: common.h  util.cpp  util.h
Executable/shaders/: basic.frag  basic.vert  debug.frag  debug.vert  instance.frag  instance.vert  skybox.frag  skybox.vert
Executable/src/: main.cpp
Executable/src/input/: input.cpp  input.h
Executable/src/renderer/: renderer.cpp  renderer.h
Executable/src/window/: window.cpp  window.h
Game/: Game.vcxitems
Game/assets/: Floor.mtl  Rock.mtl  coin.mtl  crying.dae  dance.dae  death.dae  flip.dae  idle.dae  jump.dae  run.dae  slide.dae  strafeLeft.dae  strafeRight.dae
Game/game/actors/: collectable.cpp  collectable.h  enemy.cpp  enemy.h  floor.cpp  floor.h  rope.cpp  rope.h
Game/game/character/: pitfallCharacter.cpp  pitfallCharacter.h
Game/game/framework/: pitfallGameInstance.cpp  (+1 more)
Linux/: Linux.vcxproj  cpp.hint
Linux/inc/: stb_image.h
Linux/shaders/: basic.frag  basic.vert  debug.frag  debug.vert  instance.frag  instance.vert  skybox.frag  skybox.vert
Linux/src/: main.cpp
(+141 files in other folders)
